[tool.poetry]
name = "covid-results"
version = "0.1.0"
description = ""
authors = ["Mo"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
python-dotenv = "^0.19.2"
twilio = "^7.7.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
